fd, subclass, type vocab

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,14 +454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "('\"method\": \"getIccSerialNumber\"', ['\"method\": \"getIccSerialNumber\"']),\n"
+      "\"subclass\": \"PHONE\"\n"
      ]
     }
    ],
@@ -479,9 +479,7 @@
     "#     percentage = 100.*counts/counts.sum()\n",
     "#     lines = ['{0} - {1:1.2f}% ({2}) \\n'.format(i,j,k) for i,j,k in zip(categories, percentage, counts)]\n",
     "#     with open('token_extraction\\\\raw\\\\' + key + '.txt', 'w') as write_txt:\n",
-    "#         write_txt.writelines(lines)\n",
-    "\n",
-    "print('(\\'\\\"method\\\": \\\"getIccSerialNumber\\\"\\', [\\'\\\"method\\\": \\\"getIccSerialNumber\\\"\\']),')"
+    "#         write_txt.writelines(lines)"
    ]
   },
   {
@@ -496,7 +494,8 @@
     "* Value will be touple of RegEx expression and list of corresponding unique tokens as plain strings\n",
     "### Important Notes\n",
     "* interfaceGroup does not offer any additional information over interface, therefore it is not accounted for in the vocabulary and should be excluded from the final data\n",
-    "* methodName will not be included in vocabulary or the final dataset. There are thousands of unique values in a sample size of only 200 and these values really only amount to a combination of the interface, method, and arguments keys. Therefore, the model should be able to form generalizations from the first two and arguments can be tokenized and implemented to provide the same level of data if it is necessary."
+    "* methodName will not be included in vocabulary or the final dataset. There are thousands of unique values in a sample size of only 200 and these values really only amount to a combination of the interface, method, and arguments keys. Therefore, the model should be able to form generalizations from the first two and arguments can be tokenized and implemented to provide the same level of data if it is necessary.\n",
+    "* The vocabulary may turn out to be around 800 tokens. Due to the extreme length of each sample, this could become very expensive during training, so it is worth considering taking a look at the hidden vectors of each token after a few epochs and then concatenating those in a key that are very similar to decrease training cost. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -553,20 +552,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "method_info = open(\"token_extraction\\\\raw\\\\method.txt\", 'r')\n",
+    "method_info = open(\"token_extraction\\\\raw\\\\.txt\", 'r')\n",
     "formatted_lines = []\n",
-    "count = 95\n",
+    "count = 568\n",
     "for line in method_info:\n",
     "    value = line.split(\" - \")[0]\n",
-    "    formatted_lines.append('{1}: (\\'\\\"method\\\": \\\"{0}\\\"\\', [\\'\\\"method\\\": \\\"{0}\\\"\\']),\\n'.format(value, count))\n",
+    "    formatted_lines.append('{1}: (\\'\\\"write fd\\\": {0}\\', [\\'\\\"write fd\\\": {0}\\']),\\n'.format(value, count))\n",
     "    count += 1\n",
     "method_info.close()\n",
     "\n",
-    "with open('formatted_methods.txt', 'w') as write:\n",
+    "with open('formatted_write fd.txt', 'w') as write:\n",
     "    for line in formatted_lines:\n",
     "        write.write(line)"
    ]
