added sysname tokens

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -552,20 +552,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "method_info = open(\"token_extraction\\\\raw\\\\.txt\", 'r')\n",
+    "method_info = open(\"token_extraction\\\\raw\\\\sysname.txt\", 'r')\n",
     "formatted_lines = []\n",
-    "count = 568\n",
+    "count = 578\n",
     "for line in method_info:\n",
     "    value = line.split(\" - \")[0]\n",
-    "    formatted_lines.append('{1}: (\\'\\\"write fd\\\": {0}\\', [\\'\\\"write fd\\\": {0}\\']),\\n'.format(value, count))\n",
+    "    formatted_lines.append('{1}: (\\'\\\"sysname\\\": \\\"{0}\\\"\\', [\\'\\\"sysname\\\": \\\"{0}\\\"\\']),\\n'.format(value, count))\n",
     "    count += 1\n",
     "method_info.close()\n",
     "\n",
-    "with open('formatted_write fd.txt', 'w') as write:\n",
+    "with open('formatted_sysname.txt', 'w') as write:\n",
     "    for line in formatted_lines:\n",
     "        write.write(line)"
    ]
