beta vocab finished

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,7 @@
     "import ast\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import re\n",
     "%matplotlib inline"
    ]
   },
@@ -495,7 +496,7 @@
     "### Important Notes\n",
     "* interfaceGroup does not offer any additional information over interface, therefore it is not accounted for in the vocabulary and should be excluded from the final data\n",
     "* methodName will not be included in vocabulary or the final dataset. There are thousands of unique values in a sample size of only 200 and these values really only amount to a combination of the interface, method, and arguments keys. Therefore, the model should be able to form generalizations from the first two and arguments can be tokenized and implemented to provide the same level of data if it is necessary.\n",
-    "* The vocabulary may turn out to be around 800 tokens. Due to the extreme length of each sample, this could become very expensive during training, so it is worth considering taking a look at the hidden vectors of each token after a few epochs and then concatenating those in a key that are very similar to decrease training cost. "
+    "* The vocabulary may turn out to be around 1000 tokens. Due to the extreme length of each sample, this could become very expensive during training, so it is worth considering taking a look at the hidden vectors of each token after a few epochs and then concatenating those in a key that are very similar, forming n grams and decreasing training cost. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -552,20 +553,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "method_info = open(\"token_extraction\\\\raw\\\\sysname.txt\", 'r')\n",
+    "method_info = open(\"token_extraction\\\\raw\\\\procname.txt\", 'r')\n",
     "formatted_lines = []\n",
-    "count = 578\n",
+    "count = 683\n",
+    "thread_flag = False\n",
+    "mmreader_flag = False\n",
+    "pool_flag = False\n",
     "for line in method_info:\n",
     "    value = line.split(\" - \")[0]\n",
-    "    formatted_lines.append('{1}: (\\'\\\"sysname\\\": \\\"{0}\\\"\\', [\\'\\\"sysname\\\": \\\"{0}\\\"\\']),\\n'.format(value, count))\n",
+    "    re_value = re.escape(value)\n",
+    "    if 'Thread' in value:\n",
+    "        if not thread_flag:\n",
+    "            value = 'Thread-<anything>'\n",
+    "            re_value = 'Thread-(?:..|...)'\n",
+    "            thread_flag = True\n",
+    "        else:\n",
+    "            continue\n",
+    "    elif 'mmreader' in value:\n",
+    "        if not mmreader_flag:\n",
+    "            value = 'com.android.mmreader<anything>'\n",
+    "            re_value = 'com\\.android\\.mmreader(?:...|....)'\n",
+    "            mmreader_flag = True\n",
+    "        else:\n",
+    "            continue\n",
+    "    elif 'pool-' in value:\n",
+    "        if not pool_flag:\n",
+    "            value = 'pool-<anything>-thread-<anything>'\n",
+    "            re_value = 'pool-.-thread-.'\n",
+    "            pool_flag = True\n",
+    "        else:\n",
+    "            continue\n",
+    "    formatted_lines.append('{1}: (\\'\\\"procname\\\": \\\"{0}\\\"\\', [\\'\\\"procname\\\": \\\"{2}\\\"\\']),\\n'.format(re_value, count, value))\n",
     "    count += 1\n",
     "method_info.close()\n",
     "\n",
-    "with open('formatted_sysname.txt', 'w') as write:\n",
+    "with open('formatted_procname.txt', 'w') as write:\n",
     "    for line in formatted_lines:\n",
     "        write.write(line)"
    ]
