light vocab testing

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import re\n",
+    "from numba import jit\n",
     "%matplotlib inline"
    ]
   },
@@ -76,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Takes rand sample of data to form test dataset for dict building\n",
     "\n",
-    "adware_sample = np.random.randint(0, high=886, size=(1,100))\n",
-    "banking_sample = np.random.randint(0, high=2048, size=(1,100))\n",
-    "riskware_sample = np.random.randint(0, high=2373, size=(1,100))\n",
-    "sms_sample = np.random.randint(0, high=3852, size=(1,100))\n",
+    "adware_sample = np.random.randint(0, high=886, size=(1,1))\n",
+    "banking_sample = np.random.randint(0, high=2048, size=(1,1))\n",
+    "riskware_sample = np.random.randint(0, high=2373, size=(1,1))\n",
+    "sms_sample = np.random.randint(0, high=3852, size=(1,1))\n",
     "\n",
     "sample_mat = np.concatenate((adware_sample, banking_sample), axis=0)\n",
     "sample_mat = np.concatenate((sample_mat, riskware_sample), axis=0)\n",
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,17 +456,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\"subclass\": \"PHONE\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "alt_keys = []\n",
     "\n",
@@ -495,7 +488,7 @@
     "* Value will be touple of RegEx expression and list of corresponding unique tokens as plain strings\n",
     "### Important Notes\n",
     "* interfaceGroup does not offer any additional information over interface, therefore it is not accounted for in the vocabulary and should be excluded from the final data\n",
-    "* methodName will not be included in vocabulary or the final dataset. There are thousands of unique values in a sample size of only 200 and these values really only amount to a combination of the interface, method, and arguments keys. Therefore, the model should be able to form generalizations from the first two and arguments can be tokenized and implemented to provide the same level of data if it is necessary.\n",
+    "* methodName will not be included in vocabulary or the final dataset. There are thousands of unique values in a sample size of only 400 and these values really only amount to a combination of the interface, method, and arguments keys. Therefore, the model should be able to form generalizations from the first two and arguments can be tokenized and implemented to provide the same level of data if it is necessary.\n",
     "* The vocabulary may turn out to be around 1000 tokens. Due to the extreme length of each sample, this could become very expensive during training, so it is worth considering taking a look at the hidden vectors of each token after a few epochs and then concatenating those in a key that are very similar, forming n grams and decreasing training cost. "
    ],
    "cell_type": "markdown",
@@ -503,17 +496,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['/data/data/com' '/system/bin/cat' '/system/bin/dexopt' '/system/bin/sh'\n '<pre-initialized>' 'AsyncTask #1' 'BUGLY_THREAD' 'IntentService[l'\n 'Jk7H' 'MidWorkThread' 'QueiD9ej' 'Thread-101' 'Thread-102' 'Thread-103'\n 'Thread-104' 'Thread-105' 'Thread-108' 'Thread-109' 'Thread-110'\n 'Thread-111' 'Thread-113' 'Thread-114' 'Thread-115' 'Thread-116'\n 'Thread-118' 'Thread-120' 'Thread-123' 'Thread-125' 'Thread-126'\n 'Thread-127' 'Thread-128' 'Thread-129' 'Thread-130' 'Thread-132'\n 'Thread-133' 'Thread-136' 'Thread-142' 'Thread-157' 'Thread-160'\n 'Thread-168' 'Thread-87' 'Thread-88' 'Thread-89' 'Thread-91' 'Thread-92'\n 'Thread-93' 'Thread-94' 'Thread-95' 'Thread-97' 'Thread-98' 'ad'\n 'afdejlql' 'air' 'anzmltoane' 'biz' 'brendsu' 'cat' 'cfdfvf' 'ch' 'chmod'\n 'cn' 'com' 'cpx' 'dilashama' 'dlki' 'edu' 'ensufwosr' 'eu' 'exin01'\n 'getprop' 'ggican' 'googleanzhi' 'googlems' 'gzg' 'igudi' 'info' 'jp'\n 'jyiaivi' 'logcat' 'ls' 'luy' 'midlet' 'movecont2' 'mvnxuuyuqbklpjpw'\n 'mwlqythh' 'net' 'ngjvnpslnp' 'nmwurmoxc' 'oeiah' 'of' 'org'\n 'pool-1-thread-1' 'pool-2-thread-1' 'pool-3-thread-1' 'pool-3-thread-2'\n 'pool-4-thread-1' 'pool-5-thread-1' 'pool-7-thread-1' 'ps' 'quri' 'ren'\n 'rom' 'ru' 's' 'service' 'sh' 'silao' 'srcdsnms' 'ssadsdf' 'su' 'tax'\n 'test' 'tj' 'tp5x' 'tta' 'ua' 'ulkfg' 'urw' 'vbkoxh' 'vbnxjb' 'vdman'\n 'vfiakd' 'vrnyl' 'vudk' 'vvxxbb' 'wcu' 'xgqkjm' 'xiaihui' 'xiivig' 'xw'\n 'yhonvqb' 'yun01' 'za000' 'zhuangbishenqi' 'zitong' 'zygote']\n[  3   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n   1   1   1   1   1   1   7 205   1   1   1   2   1   2   1   1   1   1\n   1   1   1   1   1   1   1   1   1   1   1   1   1   7   1   1   1   1\n   7   1   1   1   1   1   1   1   2   1   2   1   4   1   1   1   1   1\n   1   2   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n   1   1   1   1   1   1   1   1   1   1]\n\n\n['PwcD' 'Tiomiym9' 'WGt12' 'ada' 'adwo' 'akdfjd' 'alumberinc' 'andorid'\n 'android' 'androidemu' 'apk' 'app' 'apps' 'aqizhib' 'aql' 'arrow'\n 'attend' 'azyouxi' 'baoshi' 'battery' 'bb' 'bcfdfvf' 'bfveeopo' 'bowl'\n 'bratolubzet' 'bravo' 'bslsvpcn' 'bull88' 'cash' 'ccav' 'ccponcerinc'\n 'chenchel' 'colorme' 'com' 'convertoman' 'cooease' 'cql' 'crovjjs'\n 'cswnpr' 'd' 'de' 'def' 'depositmobi' 'dgoizzrboarj' 'dkfi' 'dobi'\n 'douniwaner' 'droid' 'drv' 'dxgdldfdycdchj' 'eoeof' 'espabit' 'example'\n 'exin02' 'ezahS1gi' 'facbbvhir' 'fanta' 'feifei' 'fengche' 'fepefepopab'\n 'fhkuuej' 'freda' 'free' 'game' 'gamedemo' 'games' 'gamex' 'gcaktairccvz'\n 'genaqeburi' 'google' 'googleapi' 'gp' 'gps' 'greensoft' 'gsh' 'guao'\n 'ha' 'han' 'hana' 'hanjins123123' 'hao' 'hh' 'holy' 'hongxiu' 'hosy'\n 'hssd' 'ic3b48cbcbd24e55b' 'ilbypx' 'inca' 'ion' 'iplhmk' 'ipukgw'\n 'iqeadmcuzf' 'jaw' 'jbb' 'jgvfvdaw' 'jlimwd' 'jonas' 'juyu' 'jwnnvvwxn'\n 'kait' 'kaiv' 'kajg' 'kangkang' 'kaoeiwk3223' 'kb' 'kbs' 'kbzezj'\n 'kdpyvc' 'kjw' 'kkk' 'ko' 'kwl' 'lck' 'lctyznvnh' 'lgz' 'li' 'll'\n 'llrgkj' 'locker' 'long01' 'loonggg' 'lpo' 'mDJswaqu4'\n 'manufacturatinkov' 'margaritasoft' 'mdf' 'meinv' 'metasploit' 'mix'\n 'mobi' 'modded' 'mogo' 'monkeytouchs' 'mrken' 'msefsgting' 'mskdev' 'muc'\n 'musicsleep' 'mwkek' 'mx' 'myfoot' 'nanoha' 'net' 'netlizard' 'newapp'\n 'newskin' 'nfidcq' 'ngthz' 'nhnewbank' 'ni' 'nijibolan' 'nomnq' 'note'\n 'notify1' 'ns1d' 'nth' 'oaAlmL' 'ohduxbbylb' 'onmsrbt' 'ooedhsl'\n 'openintents' 'or' 'orangeery' 'patusd' 'pointhim' 'police20' 'ppd' 'ps'\n 'qabocemawesi' 'qaolckwnvj' 'qeykn' 'qianmingdshi' 'qkhyzaopiz' 'qklsjv'\n 'qq' 'qunqiandao' 'rexsee' 'roamingsoft' 'rock' 'rokcvyfjtdp'\n 'rwbkulojmti' 'satismangrooup' 'sh' 'shinhan' 'shirley' 'silaisilao'\n 'sniff' 'soft' 'softforlife' 'software' 'ss' 'strongtech' 'symapp' 'task'\n 'termate' 'timer' 'timo' 'tqb' 'trdos' 'truefalse' 'ttb' 'tvone'\n 'txdvvmncciiri' 'underdev' 'une' 'utviqi' 'uus01' 'uyf' 'video'\n 'viploder' 'vvlncl' 'vwtavlp' 'wangyh' 'wb' 'we' 'weuh' 'wgk' 'wl'\n 'woorinewbank' 'wrsqc' 'wuzi' 'wvaomvba' 'wxqhbfz' 'xdwf' 'xee'\n 'xgssubbt' 'xiao88' 'xiaoniaolianliankan09' 'xmeudp' 'yci' 'ycvdgfwk'\n 'yfan' 'yongrun' 'yyasp' 'yybergeanzhi' 'zZMdMtw' 'za111' 'zcrqwa' 'zh'\n 'zhen001' 'znn' 'zrh' 'zwlxiaoxiao' 'zyj']\n[ 1  1  1  1  1  1  1  1 30  3  1  1  2  1  1  1  1  1  1  1  1  2  1  1\n  1  1  1  1  1  1  1  1  3  7  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  3  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  3  1  3\n  1  2  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  1  1  1  1  1  1  3  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  3  1  1  1  1  1  1  3  1  1  1  1  1  1  1  1  1  1  1  1  1  1  5  2\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  2  1\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n  1  1  1  1  1]\n\n\n['A120404_camera2' 'DropBubble' 'GestureWidget_free'\n 'KalromSystems.FlappyYou' 'Mzgrr' 'Potzimm9' 'Rn.adS:xs' 'Solo'\n 'TrueOrFalse' 'a2ar.sfm.adp2p' 'aardehddeluxeedition' 'abc'\n 'abxingxdmimi.test' 'adamusice' 'admin.hongyan' 'akalc' 'akdfkda'\n 'andrinst' 'android' 'android.appinstaller'\n 'android.contentabo_l01_sim_univ' 'android.ebk.hana.ibkb'\n 'android.games.mine' 'antivirus' 'apc.woori.kr.android.apd' 'app'\n 'app.sxmn' 'app253480' 'app253489' 'appdownload' 'application' 'apps'\n 'appzwlxiaoxiao' 'autoanswer' 'avve' 'awgubnyx' 'babbleharbor'\n 'backup.think' 'bbyupn' 'bcdbcf12014.mobile' 'bluetooth' 'bmsvhzhlh'\n 'bull99' 'bysc' 'calendar' 'callrecorder' 'cepter' 'chrm67.service'\n 'clock' 'cn' 'cocos.gj' 'coolpic' 'cores' 'cosina.game.kickkick'\n 'crazygame' 'csppxx.lock0011' 'cug.compass' 'cxyyvm/files/libyunsvc'\n 'dawdlermenu' 'dd' 'dd.axkyrbacnplcm.vj' 'ddp' 'dkuca' 'dlpushplugin'\n 'dmjino:sev' 'donote' 'eascwz' 'eeepsjej' 'egypt' 'eley' 'emcpvq'\n 'emu.hwjisufeiche' 'english.audiostory' 'essexyfaceGR' 'exam.accountant'\n 'ezboys:sev' 'filemanager' 'firstdevelop' 'flashlight' 'flickrdailyshow'\n 'food02' 'future' 'fwlnxn' 'gCrziJ' 'game.RedMenaceb1'\n 'game.dongtaigaonanduzhaocha' 'game.kaoladaishu' 'game.plane'\n 'game.zombiesboss' 'gcwhbl' 'gfiybbpc' 'gfsittfy' 'girl.zipai'\n 'google.kr.channel.korea.app' 'google.nhb.kr.bk.app' 'gota'\n 'guihuijipaon.test' 'gxluh' 'hanyu' 'harvemario:emulator'\n 'harvexueren:emulator' 'hasvgf:sev' 'holocaust435' 'honda' 'idhfxz'\n 'install' 'instman' 'jdjgl' 'jewels' 'jgvfvdaw'\n 'jgvfvdaw/files/libyunsvc' 'jnkgpwcl' 'jsy.kittymemohvc' 'jvje.nuky'\n 'kaqdok:es' 'kb' 'kgopon' 'kigof.qabocemawesi' 'kkc.xsezse' 'kqsgzyjzjhb'\n 'kr' 'kura' 'legendasura' 'lhtnemrp/files/libyunsvc' 'live'\n 'livewallpaper.xiangcun1' 'livewallpapersb127' 'llk' 'maboo.tow'\n 'mahjongg' 'man30' 'manager.root' 'market' 'marketapp'\n 'merrychristmas2015' 'message' 'mhwwkd:es' 'mkt' 'mmreader1065'\n 'mmreader1075' 'mmreader255' 'mmreader354' 'mmreader383' 'mmreader392'\n 'mmreader418' 'mmreader588' 'mmreader611' 'mmreader678' 'mmreader681'\n 'mmreader717' 'mmreader801' 'monkey.ui' 'music20130514000421' 'mxdsharde'\n 'nddhkx:es' 'nghcyr' 'nhyundai' 'nijibolan' 'ninjaturtlesflapy'\n 'noort.bcddgi12257.model' 'notor.bcdidg12725.model' 'nyzombies' 'nzdmdn'\n 'nzza' 'obzalbch' 'ojhsgjky' 'olivedream' 'ophone.chapter4_4' 'org'\n 'patax.fepefepopab' 'penetratepro' 'pintu.view' 'pire.xahovaxuno'\n 'pjthtn' 'player.xxx.super.girl.sett' 'playwithyourdogdalmatian' 'polooy'\n 'popdancequeenpartygirl' 'post.avproguard' 'proin' 'punbshfp' 'pziuxn'\n 'qBanHuoYingRenWu' 'qckbmn:es' 'qeam' 'qqlocation' 'qqmm' 'qqonline'\n 'qqxjdg' 'quri.genaqeburi' 'rjceni:es' 'rjmwep' 'rlucmxtu' 'roboty'\n 'ruganovich' 'ruhutianyi' 'saimadaheng1009' 'salonkrasoty' 'sbvoa'\n 'screensaver.alnine6' 'screensaver.hsxgiphone2' 'screensaver.mdn7'\n 'search' 'security' 'seeing.master.understanding.climate.knife'\n 'services' 'shuazuan' 'shuizu' 'sign' 'simkawang' 'singlebook254995'\n 'slushai' 'solitaire' 'stage' 'stlstart' 'systemui'\n 'talkingangela.yOUt1116.j.f.h.K.S' 'teje.texori' 'tencent.zdevs.bah'\n 'tencet.qbaiduq.weixin.org' 'three' 'traintime' 'ttdxbX' 'untoenynh'\n 'uowlnv:sev' 'uswg' 'uus02' 'uyuyp' 'vbnbg.zsag' 'vdfrt.hkb' 'view' 'vn'\n 'wgoosystem' 'wyyx.ttkpsjbwg' 'x' 'xavg.bgtwa' 'xgyhdk' 'xiaochu'\n 'xofwfj' 'yaoqianshu3' 'yhbdds.nxlfj' 'zhen002' 'zhenrenqian' 'zqjfewhb'\n 'zrlyuhm' 'zwyouhuadashic']\n[1 1 1 1 1 1 1 1 1 1 1 3 1 1 1 1 1 1 2 1 1 1 1 1 1 5 1 1 1 1 1 2 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1\n 1 1 1 1 1 1 1 1 4 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Below code looks at the makeup of unique procname values in hopes of creating tokens from the frequency of different subvalues\n",
     "\n",
@@ -553,10 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#formats and creates n grams for procname tokens\n",
     "method_info = open(\"token_extraction\\\\raw\\\\procname.txt\", 'r')\n",
     "formatted_lines = []\n",
     "count = 683\n",
@@ -598,10 +584,81 @@
   },
   {
    "source": [
-    "## ID and TS Features"
+    "## Light vocab testing\n",
+    "Just to make sure the vocab is working correctly we want to do a quick test where we look at a few samples, tokenize them, and then look at which tokens are not converted to indicices. \n",
+    "### Process\n",
+    "1. Define the regex expression from vocabulary.txt dict\n",
+    "2. Tokenize with regex without a lookbehind assertion\n",
+    "3. Make file of leftover tokens and analyze\n",
+    "### Results\n",
+    "* Fairly good, seemingly no tokens that should be in the vocabulary were returned as oov.\n",
+    "* Most entries were made up of ts, parameter, blob, etc keys\n",
+    "* A lot of commas, brackets, and braces were extracted where they shouldn't have or left in\n",
+    "- Need to reasses how these are extracted so meaningless ones are not tokenized and meaningful ones are"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('vocabulary.txt') as vocab_path:\n",
+    "    vocab_file = vocab_path.read()\n",
+    "\n",
+    "delimiter_list = []\n",
+    "vocab = ast.literal_eval(vocab_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for packed_value in vocab.values():\n",
+    "    delimiter, literal = packed_value\n",
+    "    delimiter_list.append(str(delimiter))\n",
+    "\n",
+    "regex_pattern = re.compile('|'.join(delimiter_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "leftover_tokens = []\n",
+    "\n",
+    "@jit(parallel=True, fastmath=True)\n",
+    "def take_tokens(sample):\n",
+    "    return re.split(regex_pattern, sample)\n",
+    "\n",
+    "for sample in sample_data:\n",
+    "    leftover_tokens.append(take_tokens(sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test_oov_tokens.txt', 'w') as write_tokens:\n",
+    "    for sample_tokens in leftover_tokens:\n",
+    "        for token in sample_tokens:\n",
+    "            write_tokens.write(token + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
