fixed comma delimiter

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -593,8 +593,10 @@
     "### Results\n",
     "* Fairly good, seemingly no tokens that should be in the vocabulary were returned as oov.\n",
     "* Most entries were made up of ts, parameter, blob, etc keys\n",
-    "* A lot of commas, brackets, and braces were extracted where they shouldn't have or left in\n",
-    "- Need to reasses how these are extracted so meaningless ones are not tokenized and meaningful ones are"
+    "* A lot of commas, brackets, and braces were extracted where they shouldn't have or left in. Need to reasses how these are extracted so meaningless ones are not tokenized and meaningful ones are\n",
+    "### Fixes \n",
+    "* Changed ', ' delimiter\n",
+    "* tokens extracted from unused keys (', ','{', etc) will have to be accounted for in final tokenizer logic"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -654,11 +656,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Additional Vocab Testing\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
