additional vocab testing finalized vocab

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,10 @@
     "import ast\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import re\n",
+    "import regex as re\n",
+    "# Use pypi regex module for additional functionality\n",
     "from numba import jit\n",
+    "from typing import NamedTuple\n",
     "%matplotlib inline"
    ]
   },
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +163,9 @@
     "    for rand_ind in sample_mat[mat_index, 0:]:\n",
     "        with open(sample_dir + '\\\\' + sample_list[rand_ind] + '\\\\sample_for_analysis.apk.json') as sample_file:\n",
     "            sample_data.append(sample_file.read().replace(\"\\n\", \" \"))\n",
-    "    mat_index += 1"
+    "    mat_index += 1\n",
+    "\n",
+    "sample_data = [sample_data[3]]"
    ]
   },
   {
@@ -603,44 +607,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('vocabulary.txt') as vocab_path:\n",
     "    vocab_file = vocab_path.read()\n",
     "\n",
-    "delimiter_list = []\n",
     "vocab = ast.literal_eval(vocab_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for packed_value in vocab.values():\n",
-    "    delimiter, literal = packed_value\n",
-    "    delimiter_list.append(str(delimiter))\n",
+    "token_specification = []\n",
+    "literal_list = []\n",
+    "delimiter_list = []\n",
     "\n",
-    "regex_pattern = re.compile('|'.join(delimiter_list))"
+    "for packed_items in vocab.items():\n",
+    "    index, value = packed_items\n",
+    "    delimiter, literal = value\n",
+    "    if delimiter != None:\n",
+    "        delimiter_list.append(str(delimiter))\n",
+    "        token_specification.append(('I' + str(index), delimiter))\n",
+    "    literal_list.append(literal)\n",
+    "\n",
+    "regex_pattern = '|'.join('(?P<{0}>{1})'.format(name, delim) for name, delim in token_specification)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "leftover_tokens = []\n",
-    "\n",
-    "@jit(parallel=True, fastmath=True)\n",
     "def take_tokens(sample):\n",
-    "    return re.split(regex_pattern, sample)\n",
-    "\n",
+    "    token_list = []\n",
+    "    index_list = []\n",
+    "    for yeild in re.finditer(regex_pattern, sample):\n",
+    "        token_list.append(yeild.group())\n",
+    "        index_list.append(int(yeild.lastgroup[1:]))\n",
+    "    return token_list, index_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for sample in sample_data:\n",
-    "    leftover_tokens.append(take_tokens(sample))"
+    "    extracted_tokens, extracted_index = take_tokens(sample)\n",
+    "\n",
+    "with open('iter_tokenizer_test.txt', 'w') as write_token_test:\n",
+    "    for line in extracted_tokens:\n",
+    "        write_token_test.write(line + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def index_and_match(token_list, index_list, vocabulary):\n",
+    "    not_matching = []\n",
+    "    iterator = 0\n",
+    "\n",
+    "    for extracted_token in token_list:\n",
+    "        index = index_list[iterator]\n",
+    "        ___, literals = vocabulary.get(index)\n",
+    "        matched_flag = False\n",
+    "        for literal in literals:\n",
+    "            if literal == extracted_token:\n",
+    "                matched_flag = True\n",
+    "        if not matched_flag:\n",
+    "            not_matching.append(extracted_token + ' is not ' + str(literal) + ' (index: ' + str(index) + ')\\n')\n",
+    "        matched_flag = False\n",
+    "        iterator += 1\n",
+    "\n",
+    "    return not_matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errors = index_and_match(extracted_tokens, extracted_index, vocab)\n",
+    "errors = np.unique(errors)"
    ]
   },
   {
@@ -649,15 +708,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test_oov_tokens.txt', 'w') as write_tokens:\n",
-    "    for sample_tokens in leftover_tokens:\n",
-    "        for token in sample_tokens:\n",
-    "            write_tokens.write(token + '\\n')"
+    "with open('vocab_trans_test.txt', 'w') as write_test:\n",
+    "    for line in errors:\n",
+    "        write_test.write(line)"
    ]
   },
   {
    "source": [
-    "## Additional Vocab Testing\n"
+    "## Additional Vocab Testing\n",
+    "To confirm the vocabulary works as intended, we are going to extract tokens like before but with a look behind assertion. These tokens will be mapped to the dictionary to get their index if it exists, then checked to see if they match the literal value at that token. Should return a list of false matches.\n",
+    "### Results\n",
+    "* Some minor errors occured in greedy expressions, these were fixed\n",
+    "* No other significant errors"
    ],
    "cell_type": "markdown",
    "metadata": {}
